hphp/hack/test/typecheck/encapsed4.php.exp
File "encapsed4.php", line 7, characters 10-17:
The ${x} syntax is disallowed in Hack. Use {$x} instead. (Parsing[1002])
